--- a/templates/index.html
+++ b/templates/index.html
@@ -1,74 +1,46 @@
+<! DOCTYPE html>
+
+<!DOCTYPE html>
+<html >
 <head>
-    <title>{{ title }}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <title>Diabetes Risk Prediction</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}">
 </head>
 <body>
-    <div class="App">
-        <header class="App-header">
-
-        </header>
-        <main>
-            <form class="titanic-form" method="POST" action="{{ url_for('predict')}}">
-                <section class="input-section">
-                  <div class="form-row">
-                    <label for="pclass">Ticket Class</label>
-                    <select id="pclass" name="pclass">
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                    </select>
-                  </div>
-                  <div class="form-row">
-                    <label for="sex">Sex</label>
-                    <select id="sex" name="sex">
-                      <option value="1">Female</option>
-                      <option value="2">Male</option>
-                    </select>
-                  </div>
-        
-                  <div class="form-row">
-                    <label for="age">Age</label>
-                    <input id="age" name="age" type="number" min="15" max="99" />
-                  </div>
-        
-                  <div class="form-row">
-                    <label for="sibsp"># of Siblings/Spouces</label>
-                    <input id="sibsp" name="sibsp" type="number" />
-                  </div>
-        
-                  <div class="form-row">
-                    <label for="parch"># of Parents/children</label>
-                    <input id="parch" name="parch" type="number" />
-                  </div>
-        
-                  <div class="form-row">
-                    <label for="fare">Fare</label>
-                    <input id="fare" name="fare" />
-                  </div>
-        
-                  <div class="form-row">
-                    <label for="embarked">Embarked</label>
-                    <select id="embarked" name="embarked">
-                      <option value="1">S</option>
-                      <option value="2">C</option>
-                      <option value="3">Q</option>
-                    </select>
-                  </div>
-                </section>
-                <section class="output-section">
-                  <div class="survived-row">
-                    <label for="survived">Survived : </label>
-                    <span id="survived"></span>
-                  </div>
-                </section>
-                <section class="button-section">
-                  <div class="button-row">
-                    <button id="submit">PREDICT</button>
-                  </div>
-                </section>
-              </form>
-        </main>
-    </div>
+  <h1 class="appname textclr">Diabetes Risk Assessment</h1>
+  <main>
+    <section class="info-section">
+      <div class="info-desc">
+          <p class="textclr">Diabetes is a health condition in which body does not make good use of insulin released by pancreas, 
+          resulting in higher blood sugar levels. High blood sugar levels can cause complicated health issues like 
+          heart disease, kidney disease, and vision loss.</p>
+          <p class="textclr">According to Centers for Disease Control and Prevention, more than 37 million American adults have diabetes 
+            and about 1 in 5 people with diabetes don't know they have it.
+          </p>
+          <p class="textclr">This diabetes risk assessment is aimed at predicting early stage type-2 diabetes risk in
+              individuals of age 20-90.</p>
+          <p class="textclr">The assessment is easy, requires a few minutes to complete and provides you an instant prediction.</p>
+      </div>
+        <button class="start-btn" type="button" onclick="window.location.href='{{ url_for('questions') }}';">Start Assessment</button>
+    </section>
+    <section class="news-section">
+      <div>
+        <p class="news-sec-head textclr">Check out top health news</p>
+      </div>
+      <div id="news" class="news">
+        <a href="" id="news-link"><p id="news-title"></p></a>
+      </div> 
+    </section>
+  </main>
+  <footer>
+    <p>He who has health, has hope; and he who has hope, has everything - Thomas Carlyle</p>
+ </footer>
+ <script type="text/javascript" src="{{ url_for('static',filename='script/script.js') }}"></script>
 </body>
-
 </html>
